--- a/site/homepage.html
+++ b/site/homepage.html
@@ -5,7 +5,7 @@
 	<title>The Restaurant</title>
 </head>
 <body>
-	<h1>Welcome to the restaurant! Let's Order..</h1>
+	<h1>Welcome to the restaurant! Let's Order.. Go checkout our latest menus!</h1>
 
 </body>
 </html>
