--- a/site/homepage.html
+++ b/site/homepage.html
@@ -1,11 +1,34 @@
-<!doctype html>
 <!DOCTYPE html>
 <html>
 <head>
 	<title>The Restaurant</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<h1>Welcome to the restaurant! Let's Order.. Go checkout our latest menus!</h1>
+	<h1>Our Menu</h1>
+	<div id="sel">
+		<div class="d1 wd">
+			<div class="bx">
+				<div class="p1 pp">chicken</div>
+			    <p>Borders and Colors: Each section should have a background color set to some color (of your choosing). Set the background color of each section title region to some unique color (of your choosing). Make sure that the background color still allows the user to view the text in the section and section title regions.</p>
+		    </div>
+		</div>
+		<div class="d2 wd">
+			<div class="bx">
+				<div class="p2 pp">fish</div>
+			    <p >Set a black border on both the section and section title region that is 1px thick. Warning: While not specifying borders and colors according to the requirements does not hurt your grade so much, not doing so will make it much harder for your classmates to peer grade the rest of your assignment, possibly resulting in a much lower grade.
+			    </p>
+		    </div>
+		</div>
+		<div class="d3 wd">
+			<div class="bx">
+				<div class="p3 pp">saudages</div>
+			    <p>You will NOT be graded on this, but you may want to explicitly set a font-family for the text in your page, so you are not stuck with the default browser font family. Also, set the font size of the heading and section title to be 75% larger and 25% larger (respectively) than the font size of the dummy text.</p>
+			</div>
+		</div>
+	</div>
 
 </body>
 </html>
