--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -39,7 +39,7 @@
           <a class="nav-link" href="#">About Us</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">0715895685</a><div>We deliver</div>
+          <a class="nav-link" href="tel:0710941199">0715895685</a><div>We deliver</div>
         </li>
       </ul></div>         
 
