--- a/restaurant/menu-categories.html
+++ b/restaurant/menu-categories.html
@@ -29,7 +29,9 @@
            
             <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
       <ul id="nav-list" class="navbar-nav  mb-2 mb-lg-0 ">
-        
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">Home  </a>
+        </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Special Offers  </a>
         </li>
