--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -27,7 +27,7 @@
 
            
             <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-      <ul id="nav-list" class="navbar-nav d-xl-none d-lg-none">
+      <ul id="nav-list" class="navbar-nav d-xl-none d-lg-none d-md-none d-sm-none">
         <li class="nav-item">
           <a class="nav-link" href="menu-categories.html">chicken</a>
         </li>
